tag/untag products; undelete product; update apidocs
